--- a/src/assets/styles/settings.scss
+++ b/src/assets/styles/settings.scss
@@ -94,6 +94,7 @@ $xxl-breakpoint: 1400px;
 $xl-breakpoint: 1200px;
 $lg-breakpoint: 992px;
 $md-breakpoint: 768px;
+$xs-breakpoint: 576px;
 
 //font size
 $font-24: 24px;
